# little-raft

./: Cargo.toml  LICENSE  README.md  input.txt  t.txt
.github/workflows/: clippy_check.yml  greetings.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
little_raft/: Cargo.toml
little_raft/src/: cluster.rs  heartbeat_timer.rs  lib.rs  message.rs  replica.rs  state_machine.rs  timer.rs
little_raft/tests/: raft.rs  raft_stable.rs  raft_unstable.rs
simple_raft/: Cargo.toml
simple_raft/src/: cluster.rs  heartbeat_timer.rs  lib.rs  message.rs  peer.rs  replica.rs  state_machine.rs
src/: consensus_module.rs  main.rs  replicas.rs  types.rs
