[package]
name = "example"
version = "0.1.0"
authors = ["ilya <ilyaandreev2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
crossbeam = "0.8.0"
time = "0.1.39"
colored = "2"
clap = "2.33.3"
little_raft = { path = "../little_raft" }
