[package]
name = "little_raft"
version = "0.1.0"
authors = ["ilya <ilyaandreev2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
crossbeam-channel = "0.5.1"
crossbeam = "0.8.0"
timer = "0.1.3"
time = "0.1.39"
